correcting spacing between topics

--- a/assets/css/components/topicos.css
+++ b/assets/css/components/topicos.css
@@ -15,7 +15,7 @@
     justify-content: center;
 }
 .topicos__item {
-    margin: 2.5em 0.5em;
+    margin: 1.5em 0.5em;
 }
 .topicos__link {
     background-color: var(--laranja);
@@ -31,5 +31,7 @@
     .topicos__link {
         font-size: 24px;
     }
-
+    .topicos__item {
+        margin: 2.5em 0.5em;
+    }
 }
